master: exchanged values between controller through service

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<div style="max-width: 800px; margin: 20px auto">
 	  <div class="parent-element" ng-controller="ParentCtrl">
-	  	<div class="child-element" ng-controller="ChildCtrl1"></div>
-	  	<div class="child-element" ng-controller="ChildCtrl2"></div>
+	  	<div class="child-element" ng-controller="ChildCtrl1">value 1: {{value1}}</div>
+	  	<div class="child-element" ng-controller="ChildCtrl2">value 2: {{value2}},<br> total: {{total}}</div>
 	  </div>
 	</div>
 
